# asif

./: .gitignore  ChangeLog.md  Makefile  README.md  asif.cabal  blah.txt  brittany.yaml  cabal.project  naics.asif  opts.pl  package.yaml  project.sh  result.txt  result2.txt  stack.yaml  test.c
.circleci/: config.yml  ghcup.sh
app/: Main.hs
app/App/: Commands.hs  Dump.hs  IO.hs
app/App/Commands/: Dump.hs  DumpBitmap.hs  DumpOnly.hs  EncodeFiles.hs  ExtractAsnDsv.hs  ExtractCountryDsv.hs  ExtractFiles.hs  ExtractNaicDsv.hs  ExtractSegments.hs  LookupAsn.hs  LookupCountry.hs  LookupNaic.hs  Ls.hs
app/App/Commands/ExtractCountryDsv/: Lens.hs  Type.hs
app/App/Commands/ExtractSegments/: Lens.hs  Type.hs
app/App/Commands/Options/: Lens.hs  Type.hs
doc/: cli.md
src/: Example.hsc  SegmentedFormat.hs
src/App/: IO.hs
src/App/ByteString/Lazy/: Builder.hs
src/Arbor/File/Format/: Asif.hs
src/Arbor/File/Format/Asif/: ByIndex.hs  ByteString.hs  Extract.hs  Format.hs  Get.hs  IO.hs  Lens.hs  List.hs  Lookup.hs  Maybe.hs  Search.hs  Segment.hs  Text.hs  Type.hs  Whatever.hs  Write.hs
src/Arbor/File/Format/Asif/ByteString/: Builder.hs  Lazy.hs
src/Arbor/File/Format/Asif/Data/: Ip.hs  Read.hs
src/Arbor/File/Format/Asif/Format/: Decoder.hs  SegmentValue.hs  Text.hs  Type.hs
test/: SegmentedFormatSpec.hs  TestApp.hs
test/App/ByteString/Lazy/: BuilderSpec.hs
test/Arbor/: TestUtils.hs
test/Arbor/File/Format/: AsifSpec.hs
test/Arbor/File/Format/Asif/: ExtractSpec.hs  WriteSpec.hs
test/Arbor/File/Format/Asif/ByteString/: BuilderSpec.hs
test/Arbor/File/Format/Asif/Data/: IpSpec.hs
test/Arbor/File/Format/Asif/Format/: SegmentValueSpec.hs  TextSpec.hs
test/resources/: asns.asif  countries.asif  geo_asns_columnar.asif  geo_countries_columnar.columnar  geo_countries_columnar_not_matching_segments.columnar  geo_naic_columnar.columnar  naics.asif  names.asif
